kompose/dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: dev
  name: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dev
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/laravel-sail: "true"
        io.kompose.service: dev
    spec:
      containers:
        - args:
            - sh
            - -c
            - npm run start
          image: atemndobs/nestjs_api_prod:v2
          name: nestjs-api-prod
          ports:
            - containerPort: 3000
            - containerPort: 9229
          resources: {}
      restartPolicy: Always
status: {}
